feat: harden cache consistency flow